@@ -1505,6 +1505,14 @@ Info: The arch all pkg-config file contains a reference to a multi-arch path.
  referencing a i386-linux-gnu file. In this case the usual cure is to
  fix this path.
 
+Tag: pkg-config-bad-directive
+Severity: serious
+Certainty: possible
+Info: The pkg-config file contains a wrong directive.
+ .
+ The following file include a wrong directive. This could lead to
+ FTBFS or leak private compile flags to another package.
+
 Tag: dir-or-file-in-home
 Severity: serious
 Certainty: certain
