@@ -1,0 +1,29 @@
+Name: indep-good
+Description: A library good
+Requires:
+Version: 3.1.3
+Libs:
+Cflags: \
+    -I/usr/local/somewhere \
+    -D__linux__ \
+    -D__x86_64__ \
+    -D__OSVERSION__=2\
+    -g \
+    -D_FORTIFY_SOURCE=2 \
+    -O2 \
+    -Wall \
+    -fvisibility=hidden \
+    -fPIE \
+    -fstack-protector \
+    --param=ssp-buffer-size=2 \
+    -frounding-math \
+    -lmath \
+    -march=core2 \
+    -DNDEBUG \
+    -pedantic \
+    -DNEW_STDCPP \
+    -fno-check-new \
+    -fno-inline \
+    -Wl,z,relro
+
+    
